# vance

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  hud_env.py  modal_app.py  modal_rft.py  package-lock.json  package.json  prd.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hud/: config.json
agents/: __init__.py  baseline_slm.py  fireworks_agent.py  improved_slm.py
app/: __init__.py  dashboard.py  demo_data.py  main.py  service.py
app/static/: app.js  styles.css
app/templates/: about.html  evals.html  index.html
demo/: script.md
docs/: architecture.md  hud_setup.md  reward_design.md  task_authoring.md
evals/: run_eval.py
evals/dashboard_runs/: hud_20260621_171726_573d9f.json  hud_20260621_174031_a743ef.json  hud_20260621_174123_411ead.json  hud_20260621_180351_f08d91.json  run_20260621_163110_815cf3.json  run_20260621_170822_d3ea6b.json  (+1 more)
finetuning/: README.md  build_fireworks_sft.py  dashboard_training_manifest.json  fireworks_vance_sft.jsonl  fireworks_vance_sft_report.json
fireworks_evaluator/: requirements.txt  test_vance_remote.py  vance_rft_prompts.jsonl
rft/: README.md  __init__.py  build_rft_dataset.py  remote_server.py  vance_rft_prompts.jsonl
rft/evaluator/: __init__.py  (+1 more)
scripts/: dev.cjs
tasks/: easy.jsonl  hard.jsonl  heldout_20.jsonl  medium.jsonl  train_80.jsonl  vance_100.jsonl
tests/: __init__.py  test_empty_taskset.py  test_vance_main.py
vance/: __init__.py  diagnostics.py  env.py  eval_summary.py  hud.py  models.py  reward.py  runner.py  scenarios.py  state.py  tools.py  trace.py  verifier.py
(+28 files in other folders)
