[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-safeopsrl"
version = "0.1.0"
description = "Forge: a deterministic RL-style environment for safe factory incident agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0"
]

[tool.setuptools]
packages = ["forge", "agents"]
