[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vance-safeopsrl"
version = "0.1.0"
description = "Vance: a deterministic RL-style environment for safe factory incident agents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0",
  "openai>=1.0",
  "hud-python>=0.6",
  "fastmcp>=3.0",
  "modal>=1.0"
]

[project.scripts]
vance-run = "vance.runner:main"

[tool.setuptools]
packages = ["vance", "agents"]
